--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   gallery_saver: ^2.0.1
   flutter_spinkit: ^4.1.2
+  url_launcher: ^5.5.2
 
 dev_dependencies:
   flutter_test:
