--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   gallery_saver: ^2.0.1
   flutter_spinkit: ^4.1.2
   url_launcher: ^5.5.2
+  http:
+  dio: ^3.0.10
 
 dev_dependencies:
   flutter_test:
