--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
                  to determine the Window background behind the Flutter UI. -->
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
+              android:value="ca-app-pub-5774957205453296~7753339733"
               android:resource="@style/NormalTheme"
               />
             <!-- Displays an Android View that continues showing the launch screen
