--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   url_launcher: ^5.5.2
   http:
   dio: ^3.0.10
-  firebase_admob: ^0.9.3
+  #firebase_admob: ^0.9.3
 
 dev_dependencies:
   flutter_test:
