--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  image_picker: ^0.5.0+3
+  image_picker:
   image:
   tflite_flutter: ^0.5.0
   tflite_flutter_helper: ^0.1.2
