--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ app.*.map.json
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 android/app/google-services.json
 lib/Controllers/adds.dart
+
+ios/
