--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  image_picker:
+  image_picker: ^0.6.7+7
   image:
   tflite_flutter: ^0.5.0
   tflite_flutter_helper: ^0.1.2
@@ -22,13 +22,13 @@ dependencies:
   flutter_spinkit: ^4.1.2
   url_launcher: ^5.5.2
   dio: ^3.0.10
-  firebase_admob: ^0.9.3
+  firebase_admob: ^0.9.3+4
   flutter_launcher_icons: ^0.7.5
   #admob_flutter: "^0.3.4"
 
 
 dev_dependencies:
-  flutter_launcher_icons: "^0.7.3"
+  #flutter_launcher_icons: "^0.7.3"
   flutter_test:
     sdk: flutter
 
