--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: srwnn_mobile
 description: A new Flutter project.
 
-version: 1.0.0+3
+version: 1.1.0+4
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -12,7 +12,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   image_picker: ^0.6.7+7
-  image:
+  image: ^2.1.17
   tflite_flutter: ^0.5.0
   tflite_flutter_helper: ^0.1.2
   photo_view: ^0.10.2
