--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_sign_in: ^5.0.2
   in_app_purchase: ^0.5.2
   image_size_getter: ^1.0.0
+  curved_navigation_bar: ^0.3.7
+  flutter_switch: ^0.2.0
 
 dev_dependencies:
   #flutter_launcher_icons: "^0.9.3"
