--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.srwnn_mobile">
     <uses-permission 
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="29"/>
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+        <!-- android:maxSdkVersion="29"/> -->
     <uses-permission 
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="29"/>
+        android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+        <!-- android:maxSdkVersion="29"/> -->
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="com.android.vending.BILLING" />
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
@@ -16,7 +17,7 @@
          FlutterApplication and put your custom class here. -->x         
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="Super Resolution W.N.N."
+        android:label="ExusAI - Neural filters"
         android:icon="@mipmap/ic_launcher">
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
