--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,10 @@ dependencies:
   flutter_spinkit: ^5.0.0
   url_launcher: ^6.0.3
   dio: ^4.0.0
-  #firebase_admob: ^0.11.0+1 #Ya esta deprecated
   google_mobile_ads: ^0.12.1+1
   flutter_launcher_icons: ^0.9.0
   #blobs: ^1.2.0
-  #carousel_slider: ^2.3.1
+  carousel_slider: ^2.3.1
   provider: ^5.0.0
   firebase_auth: ^1.1.1
   cloud_firestore: ^1.0.6
@@ -39,6 +38,7 @@ dependencies:
   image_size_getter: ^1.0.0
   curved_navigation_bar: ^0.3.7
   flutter_switch: ^0.2.0
+
 
 dev_dependencies:
   #flutter_launcher_icons: "^0.9.3"
@@ -63,7 +63,7 @@ flutter:
     #- assets/images/test.jpg
     - assets/
     - assets/models/srwnn.tflite
-    #- assets/models/
+    - assets/Banners/
     - assets/images/test.png
     - assets/images/modelExamples/
     - assets/lang/en.json
