Working. bug on BGR after processing 1 img

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
         android:name="android.permission.READ_EXTERNAL_STORAGE"/>
         <!-- android:maxSdkVersion="29"/> -->
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
-
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="com.android.vending.BILLING" />
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
@@ -16,6 +15,7 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->x         
     <application
+        android:requestLegacyExternalStorage="true"
         android:name="io.flutter.app.FlutterApplication"
         android:label="ExusAI - Neural filters"
         android:icon="@mipmap/ic_launcher">
